chore(dashboard/pyroscope): integrate pyroscope database and dashboard
- Added Pyroscope database configuration in Grafana
- Included Pyroscope service in the docker-compose setup
- Created a new dashboard named "go-libp2p Profiling" for visualizing profiling data

--- a/dashboards/datasources.yml
+++ b/dashboards/datasources.yml
@@ -11,3 +11,9 @@ datasources:
     access: proxy
     url: http://prometheus:9090
     editable: false
+  - name: Pyroscope
+    orgId: 1
+    type: grafana-pyroscope-datasource
+    url: http://pyroscope:4040
+    access: proxy
+    editable: true
