--- a/.github/workflows/go-check.yml
+++ b/.github/workflows/go-check.yml
@@ -3,7 +3,6 @@ name: Go Checks
 on:
   pull_request:
   push:
-    branches: ["master","release-v0[0-9][0-9]"]
   workflow_dispatch:
 
 permissions:
@@ -15,7 +14,7 @@ concurrency:
 
 jobs:
   go-check:
-    uses: ipdxco/unified-github-workflows/.github/workflows/go-check.yml@v1.0
+    uses: ipdxco/unified-github-workflows/.github/workflows/go-check.yml@revert-113-revert-112-golangci-lint
     with:
       go-version: "1.24.x"
       go-generate-ignore-protoc-version-comments: true
