--- a/.github/workflows/go-test-template.yml
+++ b/.github/workflows/go-test-template.yml
@@ -25,7 +25,7 @@ jobs:
       GOTESTFLAGS: -cover -coverprofile=module-coverage.txt -coverpkg=./...
       GO386FLAGS: ""
       GORACEFLAGS: ""
-    runs-on: ${{ format('"{0}-latest"', matrix.os)) }}
+    runs-on: ${{ format('"{0}-latest"', matrix.os) }}
     name: ${{ matrix.os }} (go ${{ matrix.go }})
     steps:
       - name: Use msys2 on windows
