--- a/.github/workflows/interop-test.yml
+++ b/.github/workflows/interop-test.yml
@@ -33,7 +33,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Build image
         run: docker build -t go-libp2p-head -f test-plans/PingDockerfile .
-      - uses: libp2p/test-plans/.github/actions/run-transport-interop-test@master
+      # TODO: switch back to libp2p/test-plans@master after https://github.com/libp2p/test-plans fix is merged
+      - uses: acul71/test-plans-fork/.github/actions/run-transport-interop-test@fix-transport-workdir
         with:
           test-filter: go-libp2p-head
           extra-versions: ${{ github.workspace }}/test-plans/ping-version.json
