--- a/.golangci.yml
+++ b/.golangci.yml
@@ -6,6 +6,10 @@ run:
 issues:
   max-issues-per-linter: 0
   max-same-issues: 0
+  exclude-rules:
+    - path: _test\.go
+      linters:
+        - prealloc
 
 linters:
   enable:
